# CuriContents

./: .gitignore  README.md  main.py  pyproject.toml  reset.sh
Config/: config.py
HakuX/: __main__.py
HakuX/Modules/: broadcast.py  generate.py  prem.py  start.py  tools.py
database/: db.py
